--- a/mybook-be/package.json
+++ b/mybook-be/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^9.0.0",
     "koa": "^2.14.1",
     "koa-body": "^6.0.1",
+    "koa-jwt": "^4.0.4",
     "mongoose": "^6.10.0",
     "uuid": "^9.0.0"
   },
