--- a/mybook-be/package.json
+++ b/mybook-be/package.json
@@ -16,6 +16,7 @@
     "koa-body": "^6.0.1",
     "koa-jwt": "^4.0.4",
     "mongoose": "^6.10.0",
+    "node-xlsx": "^0.21.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
