--- a/mybook-fe/package.json
+++ b/mybook-fe/package.json
@@ -12,6 +12,7 @@
     "ant-design-vue": "^3.2.15",
     "axios": "^1.3.4",
     "moment": "^2.29.4",
+    "node-xlsx": "^0.21.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vuex": "^4.1.0"
